# doc-equation

./: .gitignore  local.env  main.py  prod.env  pyproject.toml
docker/: Dockerfile  build.sh  run-docker.sh
equation/: models.py  nougat.py  settings.py
