[tool.poetry]
name = "doc-equation"
version = "0.1.0"
description = ""
authors = ["遥奕 <jibing.yjb@alibaba-inc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfunvice = "^0.1.10"
nougat-ocr = "^0.1.17"
torch = "^2.3.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
transformers = "4.38.2" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
